Added support for switch statements inside generator functions. ------------- Created by MOE: http://code.google.com/p/moe-java MOE_MIGRATED_REVID=72076140